--- a/src/pages/landing/styles/LandingPage.module.scss
+++ b/src/pages/landing/styles/LandingPage.module.scss
@@ -127,7 +127,7 @@ html, body {
         max-width: 100%;
         height: auto;
        
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+        // box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
         display: block;
         position: relative;
         z-index: 1;
