--- a/src/components/styles/Footer.module.scss
+++ b/src/components/styles/Footer.module.scss
@@ -2,33 +2,44 @@
 
 .footer {
     width: 100%;
+    height: 73.5px;
+    justify-content: center;
+    align-items: center;
+
+    padding-right: 32px;
+    padding-bottom: 16px;
+   
+
+    // height: 73.5px;
     position: relative;
-    padding: 24px 0;
-    background: rgba(255, 255, 255, 0.02);
-    backdrop-filter: blur(100px);
-    border-radius: 12px 12px 0 0;
-    box-shadow: inset 2px 4px 16px 0 rgba(0, 0, 0, 0.25);
+    
+    background: rgba(32, 32, 32, 1);
+   
+   
+    border: 1.5px solid;
+    border-image-source: linear-gradient(158.39deg, rgba(255, 255, 255, 0.1) 14.19%, rgba(255, 255, 255, 2.5e-05) 50.59%, rgba(255, 255, 255, 2.5e-05) 68.79%, rgba(255, 255, 255, 0.025) 105.18%);
+    border-image-slice: 1;
     margin-top: auto;
     z-index: 1;
     
-    &::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        border-radius: 12px 12px 0 0;
-        padding: 1px;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1));
-        -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-        -webkit-mask-composite: xor;
-        mask-composite: exclude;
-        pointer-events: none;
-    }
+    // &::before {
+    //     content: '';
+    //     position: absolute;
+    //     inset: 0;
+    //     border-radius: 12px 12px 0 0;
+    //     padding: 1px;
+    //     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1));
+    //     -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    //     -webkit-mask-composite: xor;
+    //     mask-composite: exclude;
+    //     pointer-events: none;
+    // }
 }
 
 .container {
     max-width: 1440px;
     margin: 0 auto;
-    padding: 0 48px;
+    // padding: 0 48px;
     
     @media (max-width: 768px) {
         padding: 0 24px;
@@ -39,7 +50,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 15px;
+    width:100%;
+   
     
     @media (max-width: 768px) {
         flex-direction: column;
@@ -51,7 +64,12 @@
 .links {
     display: flex;
     align-items: center;
-    gap: 16px;
+   
+    justify-content: center;
+    width: 351px;
+    height: 8px;
+    gap: 8px;
+
     
     a {
         color: rgba(121, 134, 130, 1);
@@ -95,4 +113,16 @@
             opacity: 1;
         }
     }
+}
+
+.spiderText {
+    color: #FFFFFF;
+    font-family: Fustat;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 80px;
+    letter-spacing: 3%;
+    text-align: center;
+    vertical-align: middle;
+
 } 
