--- a/src/styles/upload.module.scss
+++ b/src/styles/upload.module.scss
@@ -11,32 +11,33 @@
   align-items: center;
 }
 
-.gradientWrapper {
-  position: relative;
-  padding: 16px;
-  /* this is the visible image border */
-  border-radius: 48px;
-  overflow: hidden;
-  // display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
+// .gradientWrapper {
+//   position: relative;
+//   padding: 16px;
+//   /* this is the visible image border */
+//   border-radius: 48px;
+//   overflow: hidden;
+//   // display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 100%;
+// }
 
-.gradientBackground {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 48px;
-  z-index: 0;
-}
+// .gradientBackground {
+//   position: absolute;
+//   inset: 0;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+//   border-radius: 48px;
+//   z-index: 0;
+// }
 
 .innerBox {
   position: relative;
   z-index: 1;
-  background: rgba(30, 30, 30, 0.85);
+  background-color: rgba(234, 233, 229, 1);
+  // background: rgba(30, 30, 30, 0.85);
   backdrop-filter: blur(32px);
   border-radius: 32px;
   padding: 48px;
@@ -47,29 +48,53 @@
   width: 100%;
   max-width: 1293px;
   /* 1325px - (16px * 2 padding) */
-  box-shadow: 0 12px 48px rgba(0, 0, 0, 0.4);
+  // box-shadow: 0 12px 48px rgba(0, 0, 0, 0.4);
   border: 1px solid rgba(255, 255, 255, 0.08);
-  text-align: center;
+  text-align: center;  
+
+  width: 1093px;
+  justify-content: center;
+  align-items: center;
+
+
+  border-radius: 16px;
+  padding: 40px;
+
+
+  
 }
 
 .uploadArea {
   flex: 1;
-  border: 2px dashed rgba(255, 255, 255, 0.2);
-  border-radius: 24px;
+  // border: 2px dashed rgba(255, 255, 255, 0.2);
+  width:1013px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 40px;
-  background: rgba(0, 0, 0, 0.2);
+  // background: rgba(0, 0, 0, 0.2);
+  background: rgba(245, 245, 245, 1);
   min-height: 250px;
   cursor: pointer;
   transition: all 0.3s ease;
+  border: 1px dashed #B5B5B5;
+  border-radius : 20px;
+ 
+  border-radius: 20px;
+  padding: 12px;
+  gap: 20px;
+  border-width: 1px;
 
-  &:hover {
-    border-color: rgba(255, 255, 255, 0.3);
-    background: rgba(0, 0, 0, 0.3);
-  }
+  
+
+
+  
+
+  // &:hover {
+  //   border-color: rgba(255, 255, 255, 0.3);
+  //   background: rgba(0, 0, 0, 0.3);
+  // }
 }
 
 .analyzeButton {
@@ -81,23 +106,24 @@
   /* fully rounded pill button */
   font-size: 16px;
   font-weight: 500;
-  color: white;
-  background: radial-gradient(circle at center,
-      #693597 15%,
-      #5091C9 70%,
-      #36EEFC 100%);
+  background: #232323;
+  opacity: 100%;
+  // background: radial-gradient(circle at center,
+  //     #693597 15%,
+  //     #5091C9 70%,
+  //     #36EEFC 100%);
   border: 1px solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
   transition: all 0.3s ease;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 12px;
-  box-shadow: 0 0 12px rgba(130, 70, 255, 0.5), 0 4px 24px rgba(0, 0, 0, 0.4);
+  gap: 5px;
+  // box-shadow: 0 0 12px rgba(130, 70, 255, 0.5), 0 4px 24px rgba(0, 0, 0, 0.4);
 
   &:hover {
     transform: translateY(-2px);
-    box-shadow: 0 0 16px rgba(130, 70, 255, 0.6), 0 6px 30px rgba(0, 0, 0, 0.5);
+    // box-shadow: 0 0 16px rgba(130, 70, 255, 0.6), 0 6px 30px rgba(0, 0, 0, 0.5);
   }
 
   &:disabled {
