fixed footer and logos

--- a/src/components/styles/Footer.module.scss
+++ b/src/components/styles/Footer.module.scss
@@ -8,6 +8,7 @@
 
     padding-right: 32px;
     padding-bottom: 16px;
+    padding-top: 8px;
    
 
     // height: 73.5px;
@@ -50,7 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 32px;
     width:100%;
    
     
@@ -124,5 +125,4 @@
     letter-spacing: 3%;
     text-align: center;
     vertical-align: middle;
-
 } 
