--- a/src/styles/upload.module.scss
+++ b/src/styles/upload.module.scss
@@ -119,6 +119,7 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
+  color: white;
   // box-shadow: 0 0 12px rgba(130, 70, 255, 0.5), 0 4px 24px rgba(0, 0, 0, 0.4);
 
   &:hover {
