--- a/src/pages/landing/styles/LandingPage.module.scss
+++ b/src/pages/landing/styles/LandingPage.module.scss
@@ -354,7 +354,7 @@ html, body {
 
 .pricingCard {
     position: relative;
-    background: rgba(248, 248, 248, 0.02);
+    // background: rgba(248, 248, 248, 0.02);
     border-radius: 24px;
     padding: 32px;
     border: 1px solid rgba(255, 255, 255, 0.1);
